<resources>
    <string name="app_name">Tula-Steel</string>
    <string name="transition_certificate">transition:CERTIFICATE</string>
    <string name="main">Главная</string>
    <string name="category_tovarnaia_zagotovka">1. Товарная заготовка</string>
    <string name="category_fasonnyi_prokat">2. Фасонный прокат</string>
    <string name="category_sortovoi_prokat">3. Сортовой прокат</string>
    <string name="category_armaturnyi_prokat">4. Арматурный прокат</string>
    <string name="category_katanka">5. Катанка</string>
    <string name="menu_fasonnyi_prokat">Фасонный прокат</string>
    <string name="menu_tovarnaia_zagotovka">Товарная заготовка</string>
    <string name="menu_sortovoi_prokat">Сортовой прокат</string>
    <string name="menu_armaturnyi_prokat">Арматурный прокат</string>
    <string name="menu_katanka">Катанка</string>
    <string name="about">О заводе</string>
    <string name="certificates">Сертификаты</string>
    <string name="about_body">Впервые в истории современной России запущен металлургический завод на базе кислородно-конвертерной стали. \nМеталлургическое оборудование установлено с учетом последних достижений мировой металлургии, позволяющими производить продукцию, как с эффективными технико-экономическими показателями, так и с повышенными требованиями к качеству от ведущего немецко-итальянского производителя металлургического оборудования – компании SMS Group. </string>
    <string name="about_header">Металлургический завод «Тула-Сталь» – \nсовременное предприятие, запущенное в июле 2019 г.</string>
    <string name="about_body2">Сталеплавильный комплекс завода оснащен набором оборудования (кислородный конвертер с комбинированной продувкой емкостью 160 т, установка ковш-печь, вакууматор камерного типа, шести ручьевая машина непрерывной разливки заготовок), позволяющим производить непрерывнолитую сортовую заготовку квадратного сечения 150×150 и 180×180 мм, с гарантированным выполнением современных требований к качественным показателям как по макро-структуре, так и по чистоте стали по содержанию газов и неметаллических включений.</string>
    <string name="about_body3">Прокатный комплекс в составе двух непрерывных сортовых станов и проволочного блока позволяет выпускать широкий сортамент следующих видов продукции:</string>
    <string name="about_body4">При этом в составе прокатных станов имеется комплекс специального оборудования, которое предназначено для производства продукции со специальными требованиями по качественным показателям, а именно: калибрующие клети на одном из сортовых станов для производства проката с повышенными требованиями к точности; крышки замедленного охлаждения на одном из станов на холодильнике, предназначенные для производства полосового проката из рессорно-пружинных марок стали; линия двустадийного охлаждения типа Стелмор, позволяющая осуществлять различные виды термообработки катанки в потоке; прово-лочный блок типа MEERDrive с индивидуальным приводом каждой из клетей для производства катанки различных диаметров и групп допусков.</string>
    <string name="about_company_title">«Тула-Сталь» -</string>
    <string name="about_company1">металлургический завод, специализирующийся на выпуске широкой линейки сортового и конструкционного проката. </string>
    <string name="about_company2">В перечень производимого сортамента входят арматура гладкая и периодическая, катанка, швеллер,  уголок равнополочный и неравнополочный, двутавр, круг, квадрат, шестигранник и полоса. Также Тула-Сталь отгружает квадратную заготовку.</string>
    <string name="about_company3">Для изготовления продукции мы используем высококачественный чугун от всемирно известного завода «Тулачермет».</string>
    <string name="about_company4">металлургический завод, специализирующийся на выпуске широкой линейки сортового и конструкционного проката. Он работает с 2019 года, это самое современное из предприятий отрасли, построенных в России. Объем инвестиций в строительство завода составил 55 млрд руб.</string>
    <string name="about_company5">Тула-Сталь является крупнейшим производителем арматуры и катанки в Центральном федеральном округе. Предприятие поставляет свою продукцию во все регионы России, а также на экспорт – в страны Европейского Союза, СНГ, Северной Африки.</string>
    <string name="about_company6">На территории предприятия находится складской комплекс.Мощность единовременного хранения металлопроката здесь
составляет 80 тыс. тонн. Тула-Сталь может отгружать продукцию как автомобильным, так и железнодорожным транспортом</string>
    <string name="about_company7">Предприятие «Тула-Сталь» и его складской комплекс расположены в непосредственной близости от основного экономического центра России – Московского
столичного региона, где проживает около 15% всего населения страны. В радиусе 1000 км от Тулы возводится 45% жилья в
России и расположено более 200 машиностроительных кластеров и индустриальных парков.</string>
    <string name="product_armatura_gladkaia">Арматура гладкая</string>
    <string name="product_armatura_periodicheskaia">Арматура периодическая</string>
    <string name="product_ugolok_ravnopolochnyi">Уголок равнополочный</string>
    <string name="product_ugolok_neravnopolochnyi">Уголок неравнополочный</string>
    <string name="product_shveller">Швеллер</string>
    <string name="product_dvutavrovaia_balka">Двутавровая балка</string>
    <string name="product_krug">Круг</string>
    <string name="product_kvadrat">Квадрат</string>
    <string name="product_shestigrannik">Шестигранник</string>
    <string name="product_polosa">Полоса</string>
    <string name="product_katanka">Катанка</string>
    <string name="product_kvadratnaia_zagotovka">Заготовка непрерывнолитая квадратного сечения</string>
    <string name="telephone_number">+7(800) 700-43-63</string>
    <string name="email">tdts@metholding.com</string>
    <string name="address">115419, г. Москва, ул. 2-й Верхний Михайловский проезд д. 9</string>
    <string name="web">www.td.tula-steel.ru</string>
    <string name="our_prodaction">Наша продукция</string>
    <string name="label">Тула-Сталь</string>
    <string name="title_body_text">Для ее изготовления мы используем высококачественный чугун от всемирно известного завода “Тулачермет”</string>
    <string name="main_body">Металлургический завод «Тула-Сталь» выпускает продукцию на современном оборудовании
от ведущих европейских поставщиков. Это позволяет производить прокат самого высокого
качества для решения любых задач наших клиентов.</string>
    <string name="welcome_text">
        Торговый дом «Тула-Сталь» использует передовое оборудование от европейских поставщиков, а в качестве сырья – чугун всемирно известного завода «Тулачермет». Наличие на предприятии установок внепечной обработки (ковш-печь и вакууматор) позволяет реализовывать продукцию самого высокого качества для решения любых задач наших клиентов.
    </string>
    <string name="welcome_text2">Компания предлагает широкий ассортимент сортового проката из рядовых и качественных марок сталей для строительных и машиностроительных компаний, а также производителей метизной продукции.</string>
    <string name="certificates_title">Сертификаты соответствия на готовую продукцию</string>
    <string-array name="certificates_34028_2016">
        <item>@string/certificates_1.1</item>
        <item>@string/certificates_1.2</item>
        <item>@string/certificates_1.3</item>
        <item>@string/certificates_1.4</item>
        <item>@string/certificates_1.5</item>
        <item>@string/certificates_1.6</item>
    </string-array>
    <string-array name="certificates_57814_82">
        <item>@string/certificates_2.1</item>
    </string-array>
    <string-array name="certificates_belarus">
        <item>@string/certificates_3.1</item>
        <item>@string/certificates_3.2</item>
        <item>@string/certificates_3.3</item>
    </string-array>
    <string-array name="certificates_europe">
        <item>@string/certificates_4.1</item>
        <item>@string/certificates_4.2</item>
        <item>@string/certificates_4.3</item>
        <item>@string/certificates_4.3</item>
        <item>@string/certificates_4.3</item>
        <item>@string/certificates_4.3</item>
    </string-array>
    <string name="certificates_choose">Выберите сертификат</string>
    <string name="certificates_1.1">Прокат арматурный А500, А500С, А500СН, А500СНУ, А500СНУК диаметром 8-40 м в прутках, 6-16 мм в мотках \n(НИЦ Строительство)</string>
    <string name="certificates_1.2">Прокат арматурный А500СЕ, А500СЕУ, А500СЕУК диаметром 8-40 м в прутках, 6-16 мм в мотках \n(НИЦ Строительство)</string>
    <string name="certificates_1.3">Прокат арматурный А600С, А600СН, А600СНУ диаметром 8-40 м в прутках, 6-16 мм в мотках \n(НИЦ Строительство)</string>
    <string name="certificates_1.4">Прокат арматурный А400 и А400С в прутках диаметром 8-40 мм и в мотках диаметром 6-16 мм \n(НИЦ Строительство)</string>
    <string name="certificates_1.5">Прокат арматурный А240С диаметром 8-40 мм в прутках и диаметром 6-16 в мотках \n(НИЦ Строительство)</string>
    <string name="certificates_1.6">Прокат арматурный А800 диаметром 10-18 мм по ГОСТ 34028-2016 \n(НИЦ Строительство)</string>
    <string name="certificates_2.1">Прокат арматурный А-III (А400) в прутках диаметром 8-32 мм и в мотках диаметром 6-10 мм по ГОСТ 5781-82 \n(НИЦ Строительство)</string>
    <string name="certificates_3.1">Прокат арматурный периодического профиля А500С диаметром 8-40 мм в прутках \n(ООО БелСтандартЦентр)</string>
    <string name="certificates_3.2">Прокат арматурный А500С, А500СН, А500СНУ диаметрами 6, 8, 10, 12 в мотках по ГОСТ 34028-2016 \n(ООО БелСтандартЦентр)</string>
    <string name="certificates_3.3">Прокат арматурный А240С диаметром 6, 8, 10, 12 мм в мотках \n(ООО БелСтандартЦентр)</string>
    <string name="certificates_4.1">Прокат арматурный B500B диаметром 8-40 мм в прутках по DIN 488-2009 DE \n(Германия)</string>
    <string name="certificates_4.2">Прокат арматурный B500B диаметром 8-40 мм в прутках по CSN 42 0139 \n(Чехия)</string>
    <string name="certificates_4.3">Прокат арматурный B500B диаметром 8-40 мм в прутках по SK TP-20_0043 EN \n(ТИИГС, Словакия)</string>
    <string name="certificates_4.4">Прокат арматурный B500B диаметром 8-40 мм в прутках по DIN 488-2009 \n(Румыния)</string>
    <string name="certificates_4.5">Прокат арматурный B500B диаметром 8-40 мм в прутках по SFS 1300-2020 \n(Финляндия)</string>
    <string name="certificates_4.6">Прокат арматурный K500B-T диаметром 8-40 мм в прутках по SS 212540-2014 \n(Швеция)</string>
    <string name="certificates_4.7">Прокат арматурный B500B диаметром 8-40 мм в прутках по DS-EN 1992-1-1-2004 \n(Дания)</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="shveller_title">Швеллеры стальные горячекатаные</string>
    <string name="shveller_description">Швеллер имеет широкую область применения. Главным образом его используют в строительстве.
        Швеллер применяют при сооружении каркасов производственных и жилых зданий, прокладке коммуникаций и для усиления несущих конструкций.
        Профиль как самостоятельная деталь встречается в перекрытиях, каркасах зданий и пандусов.
       Также его используют при возведении мостов, отделочных работах и при реконструкции зданий жилого промышленного назначения.
        Без швеллера нельзя представить строительство опорных колон и кровельных прогонов.</string>
    <string name="shveller_marki">ГОСТ 535-2005; ГОСТ 19281-2014; ГОСТ 27772-2015</string>
    <string name="shveller_upakovki">Пачки весом до 5 тонн, увязанные катанкой. На каждую пачку прикрепляются две пластиковые бирки.</string>
    <string name="about_pcd32">Свидетельство \nо признании производителя РСD 32</string>
    <string name="about_schema">Схема производства</string>
</resources>