<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="16dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:background="#F0F0F0"
                android:paddingStart="16dp"
                android:paddingTop="8dp">

                <LinearLayout
                    android:id="@+id/toolbar_linear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/label"
                        android:layout_width="68dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/label" />

                    <TextView
                        android:id="@+id/label_header"
                        style="@style/TextHeaderStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/side_margin_average"
                        android:text="@string/label" />


                </LinearLayout>

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_dark"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/about_header"
                        style="@style/TextHeaderStyleTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/about_header"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/BodyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/about_body"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/about_header" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    style="@style/BodyStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/about_body2"
                    android:textColor="@color/dark_font_grey" />

                <TextView
                    style="@style/BodyStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/about_body3"
                    android:textColor="@color/dark_font_grey" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_category_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/main_category_item_view" />

                <TextView
                    style="@style/BodyStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginEnd="48dp"
                    android:text="@string/about_body4"
                    android:textColor="@color/dark_font_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_schema"
                        style="@style/ButtonStyle"
                        android:text="@string/about_schema" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_pcd32"
                        style="@style/ButtonStyle"
                        android:layout_marginStart="16dp"
                        android:text="@string/about_pcd32"
                        app:elevation="8dp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_picture_about" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="337dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/menu_background"
        android:paddingTop="56dp"
        app:itemHorizontalPadding="32dp"
        app:itemVerticalPadding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation_drawer2" />

</androidx.drawerlayout.widget.DrawerLayout>