<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="114px"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                android:background="@color/blue_dark">

                <LinearLayout
                    android:id="@+id/contact_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="390px"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/telephone"
                        style="@style/TextContactStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="28px"
                        android:text="@string/telephone_number" />

                    <TextView
                        android:id="@+id/email"
                        style="@style/TextContactStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="48px"

                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/web"
                        style="@style/TextContactStyle"
                        android:layout_marginLeft="48px"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/web" />

                    <TextView
                        android:id="@+id/address"
                        style="@style/TextContactStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:singleLine="false"
                        android:layout_marginLeft="48px"
                        android:text="@string/address" />

                </LinearLayout>

            </com.google.android.material.appbar.MaterialToolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="500px"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navigation_drawer"
        app:itemHorizontalPadding ="24px"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_navigation_drawer"
        android:background="@drawable/menu_back">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>


